# extract-tabular-data-from-pdf

./: app.py  pyproject.toml  readme.md  requirements.txt
src/: app.py  invoice.py  rag.py  read_pdf.py
